[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maria-ledger"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A tamper-evident ledger system for MariaDB using cryptographic chains."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mysql-connector-python",
    "PyYAML",
    "typer[all]", # Use typer[all] to include rich automatically
]

[project.scripts]
maria-ledger = "maria_ledger.cli.main:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [ "tests" ]
